fix caption spacing & component right border spacing

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -42,7 +42,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 1rem 1rem 1rem 3rem;
+  padding: 1rem 0.5rem 1rem 3rem;
   box-shadow: var(--box-shadow-default);
   max-width: 1100px;
   width: 100%;
@@ -118,11 +118,13 @@ body {
 .caption {
   color: var(--color-text_lighten);
   font-size: 0.7rem;
-  padding: 0 0 0.5em 0.3em;
+  padding: 0 0 0.5em 0;
   font-family: var(--font-family-secondary);
   font-weight: 600;
 }
-
+.place .caption, .dates__date.enter .caption{
+  margin-left: 1em;
+}
 .dates {
   display: flex;
   min-width: 330px;
